fix: ! avoid button overlaying on modal title on mobile

--- a/src/ui/ModalOptionsEditor.scss
+++ b/src/ui/ModalOptionsEditor.scss
@@ -7,6 +7,14 @@
     }
 }
 
+.is-mobile {
+    .tasks-options-modal-container {
+        .modal-title {
+            margin-right: var(--size-4-12);
+        }
+    }
+}
+
 .tasks-options-modal {
     padding: 0;
 
